--- a/src/index.scss
+++ b/src/index.scss
@@ -85,6 +85,7 @@ body {
   border: none;
   border-radius: 50%;
   background: linear-gradient(to bottom, #8855ff, #6536d3);
+  margin-top: 40px;
   img {
     vertical-align: middle;
   }
@@ -128,6 +129,7 @@ footer {
       margin: 0 10px;
       display: inline-block;
       padding: 6px 0;
+      text-decoration: none;
       &.active {
         color: #fff;
         border-bottom: 2px solid #fff;
@@ -157,6 +159,16 @@ footer {
   a {
     color: #bababa;
   }
+}
+// Compare wrapper
+.compare__wrapper{
+  width: 90vw;
+  height: calc(100vh - 180px);  
+  border: 1px solid #fff;
+  border-radius: 5px;
+  box-shadow: 0 6px 50px 0 #cfd4d4;
+  position: relative;
+  overflow: auto;
 }
 // Alerts
 .error{
